# THU-Basic-Experiment-of-Optoelectronics

./: .gitattributes  CLAUDE.md
.claude/: settings.local.json
BasicExperiment/: Exp4.tex
Exp1/: Exp1-report.tex
Exp1/scripts/: I-V-curve.py
Exp3/: Exp3-report.tex
Exp3/scripts/: P-I-curve.py  P-T-curve.py  dbm2mW.py
Exp4/: Exp4-report.tex
Exp5/: Exp5-report.tex
QKD-BB84/: README.md  main.py  pyproject.toml
QKD-BB84/.cursor/rules/: codegraph.mdc
QKD-BB84/Alice/: README.md  random-gen.py  stat.py  temp.py
QKD-BB84/Alice/data/: TCSPC_10s_sync.txt  random_data_10s_1.txt  random_data_10s_2.txt  random_data_30s.txt  random_data_sync_10s.txt
QKD-BB84/Bob/: README.md  compare_channel_with_txt.py  extract_effective_events_from_t2_csv.py  extract_unique_events_to_csv.py  parse_ft1080_t2_to_csv.py  parse_ft1080_t3_to_csv.py
QKD-BB84/FPGA-control/: .gitignore  README.md
QKD-BB84/FPGA-control/.claude/: CLAUDE.md  settings.json  settings.local.json
QKD-BB84/FPGA-control/.claude/memory/: MEMORY.md  feedback_rst_polarity.md  feedback_yosys_fsm.md
QKD-BB84/FPGA-control/docker/: compile.sh  docker-compose.yml
QKD-BB84/FPGA-control/plan/: circuit.tex  implementation_plan.md  module.mmd  sim-result.md
QKD-BB84/FPGA-control/user/data/: top.xdc
QKD-BB84/FPGA-control/user/sim/: tb_laser_ctrl.v  tb_sync_gen.v  tb_top.v  tb_uart_rx.v  tb_uart_tx.v
QKD-BB84/FPGA-control/user/src/: data_buffer.v  laser_ctrl.v  sync_gen.v  top.v  uart_rx.v  uart_tx.v
QKD-BB84/ecc/: ecc_simplified.py
QKD-BB84/final-report/: final-report.tex
plan/: BasicExp-plan.md
(+4 files in other folders)
